star icon changed for temporary

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <main class="main-container">
       <div class="left-part">
-        <div class="star-icon">⭐️</div>
+        <div class="star-icon"><img src="dccl--responsive-testimonial-page/Gloing star.png" alt=""></div>
         <div class="heading">
           <h2>Reviewers</h2>
         </div>
